--- a/project/style.css
+++ b/project/style.css
@@ -269,8 +269,9 @@ a {
     line-height: 3rem;
   }
   .project-subHeading{
-    width: 70%;
+    width: 90%;
     font-size: 16px;
+    font-style: italic;
   }
   
   .btn-grp{
@@ -369,7 +370,7 @@ footer{
   position:relative;
   margin-top:-1px;
   background-color: #343d68;
-  padding:5rem;
+  padding:2rem;
 }
 
 .footer-wrapper{
@@ -382,10 +383,11 @@ footer{
 
 .footer-faded-text{
   position:absolute;
-  left:60px;
-  bottom:0;color:#535c87;
+  left: 35em;
+  bottom:0.1em;
+  color:#535c87;
   user-select:none;
-  font-size:5em;
+  font-size:1em;
 }
 
 .link-wrapper{
@@ -408,3 +410,7 @@ footer{
   gap:1rem;
 }
 
+#academic_link{
+    color: black;
+    font-weight: bold; 
+}
